# bitz-miner

./: Cargo.toml  key.txt  readme.md
src/: args.rs  constants.rs  main.rs
src/command/: account.rs  benchmark.rs  claim.rs  collect.rs  mod.rs  stake.rs
src/send/: mod.rs  priority_fee.rs  send_and_confirm.rs
src/utils/: find_hash_parallel.rs  io.rs  mod.rs  rpc.rs  table.rs
