[package]
edition = "2024"
name = "bitz-rust"
version = "0.1.0"

[[bin]]
name = "bitz"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
b64 = "0.4.0"
bincode = "1.3.3"
bs58 = "0.5.1"
bytemuck = {version = "1.16", features = ["derive"]}
bytemuck_derive = "=1.8.0"
cached = "0.46.1"
chrono = "0.4.38"
clap = {version = "4.4.12", features = ["derive"]}
colored = "2.0"
core_affinity = "0.8.1"
crossterm = "0.28.1"
drillx = "2.1.0"
env_logger = "0.10"
eore-api = "3.6.2"
eore-boost-api = "4.0.1"
futures = "0.3.30"
indicatif = "0.17.8"
log = "0.4.20"
mpl-token-metadata = "5.1"
num_cpus = "1.16.0"
ore-pool-api = "1.7.0-beta"
ore-pool-types = "1.7.0-beta"
rand = "0.8.4"
reqwest = {version = "0.12", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
solana-account-decoder = "=2.1"
solana-cli-config = "=2.1"
solana-client = "=2.1"
solana-program = "=2.1"
solana-rpc-client = "=2.1"
solana-sdk = "=2.1"
solana-transaction-status = "=2.1"
spl-associated-token-account = {version = "^6", features = ["no-entrypoint"]}
spl-token = {version = "^4", features = ["no-entrypoint"]}
steel = "4.0"
tabled = {version = "0.17.0", features = ["ansi"]}
thiserror = "1.0.63"
tokio = "1.35.1"
tokio-tungstenite = "0.16"
url = "2.5"
